RESOLVED FIXED267289
browser.scripting.executeScript doesn't handle all valid argument types
https://bugs.webkit.org/show_bug.cgi?id=267289
Summary browser.scripting.executeScript doesn't handle all valid argument types
Kiara Rose
Reported 2024-01-09 11:00:16 PST
browser.scripting.executeScript doesn't handle all valid argument types
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-09 11:00:26 PST
Kiara Rose
Comment 2 2024-01-09 11:46:44 PST
EWS
Comment 3 2024-01-09 20:16:20 PST
Committed 272836@main (38171256d249): <https://commits.webkit.org/272836@main> Reviewed commits have been landed. Closing PR #22547 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.